infra/k8s/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    
spec:
  rules:
    - host: photoguru.click
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-cip-srv
                port:
                  number: 3000
          - path: /api/albums/?(.*)
            pathType: Prefix
            backend:
              service:
                name: album-cip-srv
                port:
                  number: 3000      
          - path: /api/images/?(.*)
            pathType: Prefix
            backend:
              service:
                name: image-cip-srv
                port:
                  number: 3000           
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cip-srv
                port:
                  number: 3000
